--- a/inplace/web/index.html
+++ b/inplace/web/index.html
@@ -26,6 +26,10 @@
   <meta name="apple-mobile-web-app-title" content="inplace">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+    <!-- Google Maps Api Key -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
