--- a/inplace/web/index.html
+++ b/inplace/web/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
+    window.addEventListener("load", function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
